# clep

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-publish.yml
docs/: Makefile  conda_env.yml
docs/source/: classification.rst  cli.rst  conf.py  constants.rst  development.rst  embedding.rst  howto.rst  index.rst  introduction.rst  sample_scoring.rst
example/: Dockerfile  README.md  README.rst  affy_preprocessing.R  entrez_id_to_hgnc_id.json  entrez_id_to_hgnc_symbol.json  make_entrez_map.py  preprocessing.py  run.sh
notebooks/: Initial_pre-processing.ipynb  Testing_ssGSEA.ipynb
src/clep/: __init__.py  __main__.py  cli.py  constants.py
src/clep/classification/: __init__.py  classify.py  hpo.py  optuna.py  utils.py
src/clep/embedding/: __init__.py  evaluate.py  kge.py  network_generator.py
src/clep/sample_scoring/: __init__.py  limma.py  radical_search.py  ssgsea.py  z_score.py
src/clepp/: __init__.py  __main__.py  cli.py  constants.py
src/clepp/classification/: __init__.py  classify.py
src/clepp/embedding/: __init__.py  binning.py  evaluate.py  graph_embedding.py  kge.py  network_generator.py  nrl.py
src/clepp/sample_scoring/: __init__.py  limma.py  radical_search.py  ssgsea.py  z_score.py
src/vp4p/: __init__.py  __main__.py  cli.py  constants.py  utils.py
src/vp4p/classification/: __init__.py  classify.py
src/vp4p/embedding/: __init__.py  binning.py  evaluate.py  nrl.py  path2vec.py  row2vec.py  thresh2vec.py
src/vp4p/preprocessing/: __init__.py  limma.py  z_score.py
src/vp4p/sample_scoring/: __init__.py  evaluate.py  limma.py  ssgsea.py  z_score.py
src/vp4p/vectorization/: __init__.py  nrl.py  path2vec.py  row2vec.py  thresh2vec.py
tests/: __init__.py  embedding.tsv  final_embedding.tsv  graph_test.py  test.gexf  test_cdf.py  test_fake.py  test_network_gen.py  weighted.edgelist
tests/classify/: cross_validation_results.json
tests/classify_bin/: cross_validation_results.json
tests/resources/: dummy_exp.tsv  dummy_exp.txt  dummy_labels.csv  dummy_network.edgelist  dummy_targets.txt  final_embedding_bin.tsv  graph.eps  graph.graphml  weighted.edgelist
