[project]
name = "clep"
version = "0.0.6"
description = "A Hybrid Data and Knowledge Driven Framework for Generating Patient Representations"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "Bioinformatics",
    "Machine Learning",
    "Prediction Models",
    "Embeddings",
]
license = { file = "LICENSE" }
authors = [
    { name = "Vinay Bharadhwaj", email = "vinay.srinivas.bharadhwaj@scai.fraunhofer.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click==8.1.7",
    "pandas==2.2.2",
    "rpy2==3.5.15",
    "statsmodels==0.14.1",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "gseapy==1.1.2",
    "cffi==1.16.0",
    "pycairo==1.26.0",
    "networkx==3.3",
    "xgboost==2.0.3",
    "tqdm==4.66.4",
    "pykeen==1.11.1",
    "pandera==0.19.1",
    "optuna==3.6.1",
    "joblib==1.4.2",
    "sqlalchemy==2.0.30",
    "mysqlclient==2.2.4",
    "scipy==1.15.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-autodoc-typehints",
]
dev = ["black", "mypy", "bump-my-version", "pandas-stubs"]

[project.scripts]
"clep" = "clep.cli:main"

[tool.doc8]
max-line-length = 120

[tool.coverage.run]
branch = true
source = "clep"

[tool.coverage.report]
exclude_lines = ["def __repr__", "def __str__"]

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["numpy.typing.mypy_plugin", "pandera.mypy"]
exclude = "docs"
