##########################
# Setup.py Configuration #
##########################
[metadata]
name = vp4p
version = 0.0.1-dev
description = Implementation of Vectorization of Patients for Prediction in Python
long_description = file: README.md

# URLs associated with the project
url = FIXME
download_url = FIXME
project_urls =
    Bug Tracker = FIXME
    Source Code = FIXME
    Documentation = FIXME

# Author information
author = Vinay Bharadhwaj
author_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de
maintainer = Vinay Bharadhwaj
maintainer_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de

# License Information
license = See LICENSE file
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =


[options]
install_requires =
    click==7.0
    pandas==0.25.0
    numpy==1.17.0
    rpy2==3.1.0
    statsmodels==0.10.1

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    vp4p = vp4p.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = vp4p

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
