##########################
# Setup.py Configuration #
##########################
[metadata]
name = clepp
version = 0.0.1-dev
description = A Python package for generating CLinical Embeddings for Patient Prediction
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = FIXME
download_url = FIXME
project_urls =
    Bug Tracker = FIXME
    Source Code = FIXME
    Documentation = FIXME

# Author information
author = Vinay Bharadhwaj
author_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de
maintainer = Vinay Bharadhwaj
maintainer_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de

# License Information
license = See LICENSE file
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords = Bioinformatics, Machine Learning, Prediction Models, Embeddings


[options]
install_requires =
    click==7.0
    pandas==1.0.2
    numpy==1.17.0
    rpy2==3.1.0
    statsmodels==0.10.1
    scikit-learn==0.21.3
    seaborn==0.9.0
    gseapy==0.9.15
    cffi==1.12.3
    pycairo==1.19.1
    xgboost==1.0.2
    tqdm==4.43.0
    scikit-optimize==0.7.4
    pykeen==1.0.2

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    clepp = clepp.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = clepp

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
