##########################
# Setup.py Configuration #
##########################
[metadata]
name = clep
version = 0.0.1-dev
description = A Hybrid Data and Knowledge Driven Framework for Generating Patient Representations
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/hybrid-kg/clep
project_urls =
    Bug Tracker = https://github.com/hybrid-kg/clep/issues
    Source Code = https://github.com/hybrid-kg/clep
    Documentation = https://clep.readthedocs.io/en/latest/

# Author information
author = Vinay Bharadhwaj
author_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de
maintainer = Vinay Bharadhwaj
maintainer_email = vinay.srinivas.bharadhwaj@scai.fraunhofer.de

# License Information
license = See LICENSE file
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords = Bioinformatics, Machine Learning, Prediction Models, Embeddings


[options]
install_requires =
    click==7.0
    pandas==1.0.2
    rpy2==3.3.5
    statsmodels==0.11.1
    scikit-learn==0.23.1
    seaborn==0.9.0
    gseapy==0.9.15
    cffi==1.12.3
    pycairo==1.19.1
    networkx==2.4
    xgboost==1.0.2
    tqdm==4.43.0
    scikit-optimize==0.7.4
    pykeen==1.0.2
    scipy==1.5.1
    numpy==1.19.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    clep = clep.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = clep

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
